--- a/0_Pages/0_testvarios/Test/DIPr test.html
+++ b/0_Pages/0_testvarios/Test/DIPr test.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv=“Content-Type” content=“text/html; charset=UTF-8”>
 <meta name=“Test” content=“Tipo test aleatorio”>
-<title>Test +name</title>
+<title>Test Derecho internacional Privado 1</title>
 
 
 <style>
@@ -577,6 +577,88 @@ var questions = [
     question: "El Derecho internacional privado de origen convencional:",
     options: ["Se basa en la costumbre internacional", "Se basa en los tratados internacionales", "Se basa en la lex mercatoria", "Todas las anteriores son falsas"],
     answer: 1,
+  },
+  { question: "¿Qué es el Derecho internacional privado transnacional?", options: ["Es un sector de creciente importancia", "Se basa en la costumbre", "Es resuelto mediante el recurso al arbitraje comercial internacional", "Todas las anteriores"], answer: 3 },
+  { question: "¿Qué es la lex mercatoria?", options: ["Es un conjunto de usos y prácticas seguidos por quienes operan en un sector del comercio internacional", "Es una ley específica de un país", "Es un tratado internacional", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué es el Convenio de Viena de 11 de abril de 1980?", options: ["Es sobre la compraventa internacional de mercaderías", "Es sobre los derechos humanos", "Es sobre el cambio climático", "Es sobre la protección de los animales"], answer: 0 },
+  { question: "¿Qué son los Principios sobre los contratos mercantiles internacionales elaborados por UNIDROIT?", options: ["Son cuerpos jurídicos de amplia aplicación y aceptación en el comercio internacional", "Son leyes nacionales de un país específico", "Son tratados internacionales", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué es el Derecho internacional privado de origen convencional?", options: ["Es el derecho que surge de los tratados internacionales", "Es el derecho que surge de las leyes nacionales", "Es el derecho que surge de las costumbres", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Cómo se incorporan los tratados internacionales al ordenamiento interno de España?", options: ["Mediante la publicación completa de estos instrumentos en el BOE", "Mediante un referéndum", "Mediante una votación en el parlamento", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué es el Derecho internacional privado institucional?", options: ["Es el derecho elaborado por organizaciones supranacionales de integración", "Es el derecho que surge de las leyes nacionales", "Es el derecho que surge de las costumbres", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Cuál es el paradigma de la organización internacional de integración de la que emana un conjunto detallado de normas de Derecho internacional privado?", options: ["La ONU", "La OTAN", "La UE", "Ninguna de las anteriores"], answer: 2 },
+  { question: "¿Cómo se desenvuelve la acción normativa de la UE en el ámbito del Derecho internacional privado?", options: ["A través de un planteamiento estructural", "A través de un planteamiento individual", "A través de un planteamiento colectivo", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Cuándo nació la UE como un simple mercado común?", options: ["1957", "1967", "1977", "1987"], answer: 0 },
+  { question: "¿Qué ofrece la Unión en la actualidad?", options: ["Una realidad política", "Una realidad legislativa", "Una realidad económica", "Todas las anteriores"], answer: 3 },
+  { question: "¿Qué contiene el artículo 81 en el TFUE?", options: ["El marco normativo en el que se desarrolla la actual normativa de la UE en materia de Derecho internacional privado", "El marco normativo en el que se desarrolla la actual normativa de la UE en materia de Derecho penal", "El marco normativo en el que se desarrolla la actual normativa de la UE en materia de Derecho laboral", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué competencias tiene la Unión para regular las situaciones de tráfico externo?", options: ["Propias competencias", "Competencias compartidas", "Competencias delegadas", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué es el Convenio de Bruselas de 1968?", options: ["Es sobre la compraventa internacional de mercaderías", "Es sobre los derechos humanos", "Es sobre el reconocimiento y la ejecución de resoluciones judiciales", "Es sobre el cambio climático"], answer: 2 },
+  { question: "¿Cómo ha venido afirmando el TJUE que debe ser la exégesis del Convenio de Bruselas de 1968?", options: ["Finalista", "Sistemática", "Comparatista", "Todas las anteriores"], answer: 3 },
+
+  { question: "¿Qué establece el artículo 81.1 TFUE?", options: ["Establece la cooperación en asuntos civiles con repercusión transfronteriza", "Establece la cooperación en asuntos militares", "Establece la cooperación en asuntos económicos", "Establece la cooperación en asuntos políticos"], answer: 0 },
+  { question: "¿Qué es el Derecho Internacional Privado?", options: ["Es un conjunto de normas que regulan las relaciones entre países", "Es un conjunto de normas que regulan las relaciones entre individuos de diferentes países", "Es un conjunto de normas que regulan las relaciones entre empresas internacionales", "Es un conjunto de normas que regulan las relaciones entre organismos internacionales"], answer: 1 },
+  { question: "¿Qué es el Reglamento (CE) n.o 4/2009?", options: ["Es un reglamento sobre obligaciones de alimentos", "Es un reglamento sobre derechos humanos", "Es un reglamento sobre comercio internacional", "Es un reglamento sobre protección del medio ambiente"], answer: 0 },
+  { question: "¿Qué es el Protocolo 21 del TFUE?", options: ["Es un protocolo que permite a Irlanda decidir si participa en la elaboración y/o aplicación de los instrumentos de la UE", "Es un protocolo que establece las normas de comercio entre los países de la UE", "Es un protocolo que establece las normas de protección del medio ambiente en la UE", "Es un protocolo que establece las normas de derechos humanos en la UE"], answer: 0 },
+  { question: "¿Qué es el Protocolo 22 del TFUE?", options: ["Es un protocolo que excluye a Dinamarca de la construcción del espacio de la UE", "Es un protocolo que incluye a Dinamarca en la construcción del espacio de la UE", "Es un protocolo que establece las normas de comercio entre Dinamarca y otros países de la UE", "Es un protocolo que establece las normas de protección del medio ambiente en Dinamarca"], answer: 0 },
+  { question: "¿Qué es el Derecho de familia?", options: ["Es un conjunto de normas que regulan las relaciones familiares", "Es un conjunto de normas que regulan las relaciones comerciales", "Es un conjunto de normas que regulan las relaciones políticas", "Es un conjunto de normas que regulan las relaciones laborales"], answer: 0 },
+  { question: "¿Qué es el artículo 289 del TFUE?", options: ["Es un artículo que establece el procedimiento legislativo ordinario", "Es un artículo que establece el procedimiento legislativo especial", "Es un artículo que establece las normas de comercio", "Es un artículo que establece las normas de protección del medio ambiente"], answer: 0 },
+  { question: "¿Qué es el artículo 81.3 TFUE?", options: ["Es un artículo que establece un procedimiento legislativo especial para el Derecho de familia", "Es un artículo que establece un procedimiento legislativo ordinario para el Derecho de familia", "Es un artículo que establece las normas de comercio para el Derecho de familia", "Es un artículo que establece las normas de protección del medio ambiente para el Derecho de familia"], answer: 0 },
+  { question: "¿Qué es el artículo 81.2 TFUE?", options: ["Es un artículo que refleja los ámbitos materiales del Derecho internacional privado en los que la UE puede ejercer sus competencias legislativas", "Es un artículo que refleja los ámbitos materiales del Derecho internacional público en los que la UE puede ejercer sus competencias legislativas", "Es un artículo que refleja los ámbitos materiales del Derecho comercial en los que la UE puede ejercer sus competencias legislativas", "Es un artículo que refleja los ámbitos materiales del Derecho ambiental en los que la UE puede ejercer sus competencias legislativas"], answer: 0 },
+  { question: "¿Qué es el artículo 115 TFUE?", options: ["Es un artículo que establece la técnica normativa de la Directiva", "Es un artículo que establece la técnica normativa del Reglamento", "Es un artículo que establece la técnica normativa de la Decisión", "Es un artículo que establece la técnica normativa de la Recomendación"], answer: 0 },
+  { question: "¿Qué es el artículo 288 TFUE?", options: ["Es un artículo que establece las técnicas normativas de la UE", "Es un artículo que establece las técnicas normativas de los Estados miembros", "Es un artículo que establece las técnicas normativas de las organizaciones internacionales", "Es un artículo que establece las técnicas normativas de las empresas"], answer: 0 },
+  { question: "¿Qué es el Tratado de Amsterdam?", options: ["Es un tratado que modificó la técnica normativa más utilizada en la UE", "Es un tratado que estableció las normas de comercio en la UE", "Es un tratado que estableció las normas de protección del medio ambiente en la UE", "Es un tratado que estableció las normas de derechos humanos en la UE"], answer: 0 },
+  { question: "¿Qué es el Derecho procesal civil internacional?", options: ["Es un conjunto de normas que regulan los procedimientos judiciales en casos internacionales", "Es un conjunto de normas que regulan los procedimientos comerciales en casos internacionales", "Es un conjunto de normas que regulan los procedimientos laborales en casos internacionales", "Es un conjunto de normas que regulan los procedimientos ambientales en casos internacionales"], answer: 0 },
+  { question: "¿Qué es el Protocolo 21 del TFUE?", options: ["Es un protocolo que permite a Irlanda decidir si participa en la elaboración y/o aplicación de los instrumentos de la UE", "Es un protocolo que permite a Alemania decidir si participa en la elaboración y/o aplicación de los instrumentos de la UE", "Es un protocolo que permite a Francia decidir si participa en la elaboración y/o aplicación de los instrumentos de la UE", "Es un protocolo que permite a España decidir si participa en la elaboración y/o aplicación de los instrumentos de la UE"], answer: 0 },
+  { question: "¿Qué es el Protocolo 22 del TFUE?", options: ["Es un protocolo que excluye a Dinamarca de la construcción del espacio de la UE", "Es un protocolo que excluye a Alemania de la construcción del espacio de la UE", "Es un protocolo que excluye a Francia de la construcción del espacio de la UE", "Es un protocolo que excluye a España de la construcción del espacio de la UE"], answer: 0 },
+
+  {
+    question: "¿Cuál es el propósito del Derecho Internacional Privado?",
+    options: ["Para la seguridad jurídica", "Para la actualización de las soluciones", "Para la formalidad del propio sistema", "Todas las anteriores"],
+    answer: 3
+  },
+  {
+    question: "¿Qué normas aplicarán los tribunales y autoridades de oficio según el artículo 12.6 CC?",
+    options: ["Normas de conflicto del Derecho español", "Normas de conflicto del Derecho internacional", "Normas de conflicto del Derecho privado", "Ninguna de las anteriores"],
+    answer: 0
+  },
+  {
+    question: "¿Qué estableció la sentencia de la AP de Soria, Sección Primera, de 21 de junio de 2022?",
+    options: ["Debe rechazarse la aplicación directa del Derecho privado interno de un país", "Debe aceptarse la aplicación directa del Derecho privado interno de un país", "Debe rechazarse la aplicación directa del Derecho internacional de un país", "Ninguna de las anteriores"],
+    answer: 0
+  },
+  {
+    question: "¿A qué se extiende el carácter imperativo del artículo 12.6 CC?",
+    options: ["A las restantes normas incluidas en el sector del Derecho aplicable", "A los demás sectores de la asignatura", "Ambas son correctas", "Ninguna de las anteriores"],
+    answer: 2
+  },
+  {
+    question: "¿Qué determinará el alcance que pueda tener, en su caso, la autonomía de la voluntad de los particulares?",
+    options: ["La aplicación de las normas del sistema", "La regulación del legislador", "La elección del Estado por los particulares", "Todas las anteriores"],
+    answer: 0
+  },
+  {
+    question: "¿Qué justifica la imperatividad del sistema?",
+    options: ["La presencia del Derecho privado internacional en el tráfico externo", "El interés del Estado", "El interés de los particulares", "Todas las anteriores"],
+    answer: 0
+  },
+  {
+    question: "¿Qué garantizaría una solución justa del litigio?",
+    options: ["La aplicación de la ley más conveniente a los interesados", "La aplicación de la ley del Estado", "La aplicación de la ley del foro", "Ninguna de las anteriores"],
+    answer: 0
+  },
+  {
+    question: "¿Qué se necesita para no incurrir en errores?",
+    options: ["Reforma global del sistema", "Modificaciones del sistema", "Coordinación entre las normas", "Todas las anteriores"],
+    answer: 2
+  },
+  {
+    question: "¿Qué es necesario para la reforma global del sistema?",
+    options: ["La presencia del Derecho privado internacional en el tráfico externo", "El interés del Estado", "El interés de los particulares", "Todas las anteriores"],
+    answer: 0
+  },
+  {
+    question: "¿Qué es necesario para las modificaciones del sistema?",
+    options: ["La presencia del Derecho privado internacional en el tráfico externo", "El interés del Estado", "El interés de los particulares", "Todas las anteriores"],
+    answer: 0
   },
 
 
