--- a/0_Pages/0_testvarios/Test/test civil.html
+++ b/0_Pages/0_testvarios/Test/test civil.html
@@ -1138,7 +1138,47 @@ var questions = [
   answer: 0,
 },
 
+  { question: "¿Qué artículo del Código Civil define el concepto de testamento?", options: ["Art. 667 CC", "Art. 668 CC", "Art. 669 CC", "Art. 670 CC"], answer: 0 },
+  { question: "¿Qué tipo de acto es el testamento según el Código Civil?", options: ["Bilateral", "Unilateral", "Plurilateral", "Multilateral"], answer: 1 },
+  { question: "¿Es necesario que el testamento contenga la designación de un heredero?", options: ["Sí, siempre", "No, nunca", "Sí, pero solo en algunos casos", "No, pero solo en algunos casos"], answer: 2 },
+  { question: "¿Qué tipo de acto es el testamento según el art. 670 CC?", options: ["Personal", "Impersonal", "Personalísimo", "Impersonalísimo"], answer: 2 },
+  { question: "¿Qué artículo del Código Civil establece la revocabilidad esencial de todas las disposiciones testamentarias?", options: ["Art. 737 CC", "Art. 738 CC", "Art. 739 CC", "Art. 740 CC"], answer: 0 },
+  { question: "¿Cuál es la excepción a la revocabilidad del testamento?", options: ["El reconocimiento testamentario de la filiación", "La designación de un heredero", "La disposición de bienes", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué artículo del Código Civil establece quiénes están capacitados para testar?", options: ["Art. 662 CC", "Art. 663 CC", "Art. 664 CC", "Art. 665 CC"], answer: 0 },
+  { question: "¿Quién está incapacitado para testar según el art. 663 CC?", options: ["La persona mayor de catorce años", "La persona que en el momento de testar pueda conformar o expresar su voluntad", "La persona menor de catorce años", "Todas las personas pueden testar"], answer: 2 },
+  { question: "¿Qué vicios de la voluntad testamentaria se mencionan en el art. 673 CC?", options: ["Violencia, dolo y fraude", "Error, dolo y fraude", "Violencia, error y fraude", "Violencia, dolo y error"], answer: 0 },
+  { question: "¿Qué tipo de violencia se considera un vicio invalidante del testamento?", options: ["Solo la violencia física", "Solo la violencia moral", "Tanto la violencia física como la moral", "Ninguna violencia"], answer: 2 },
+  { question: "¿Qué concepto de dolo ofrece el art. 1269 CC?", options: ["Hay dolo cuando, con palabras o maquinaciones insidiosas de parte de uno de los contratantes, es inducido el otro a celebrar un contrato que, sin ellas, no hubiera hecho", "Hay dolo cuando, con palabras o maquinaciones insidiosas de parte de uno de los contratantes, es inducido el otro a no celebrar un contrato que, sin ellas, hubiera hecho", "Hay dolo cuando, sin palabras o maquinaciones insidiosas de parte de uno de los contratantes, es inducido el otro a celebrar un contrato que, con ellas, no hubiera hecho", "Hay dolo cuando, sin palabras o maquinaciones insidiosas de parte de uno de los contratantes, es inducido el otro a no celebrar un contrato que, con ellas, hubiera hecho"], answer: 0 },
+  { question: "¿Qué supone el error como vicio de la voluntad testamentaria?", options: ["Una representación verdadera de la realidad", "Una representación falsa de la realidad", "Una representación parcial de la realidad", "Una representación completa de la realidad"], answer: 1 },
+  { question: "¿Qué tipo de error invalidará el testamento?", options: ["El error en la declaración, solo si puede salvarse por medio de la interpretación", "El error en la declaración, solo si no puede salvarse por medio de la interpretación", "El error vicio, solo si puede salvarse por medio de la interpretación", "El error vicio, solo si no puede salvarse por medio de la interpretación"], answer: 1 },
+  { question: "¿Qué artículo del Código Civil considera irrelevante el error en el nombre, apellido o cualidades del heredero?", options: ["Art. 773 CC", "Art. 774 CC", "Art. 775 CC", "Art. 776 CC"], answer: 0 },
+  { question: "¿Qué tipo de acto es el testamento según el art. 669 CC?", options: ["Bilateral", "Unilateral", "Plurilateral", "Multilateral"], answer: 1 },
+  { question: "¿Qué artículo del Código Civil establece que el testamento será válido aunque no contenga institución de heredero?", options: ["Art. 764 CC", "Art. 765 CC", "Art. 766 CC", "Art. 767 CC"], answer: 0 },
+  { question: "¿Qué artículo del Código Civil previene el reconocimiento testamentario de la filiación?", options: ["Art. 741 CC", "Art. 742 CC", "Art. 743 CC", "Art. 744 CC"], answer: 0 },
+  { question: "¿Qué artículo del Código Civil establece que todas las disposiciones testamentarias son esencialmente revocables?", options: ["Art. 737 CC", "Art. 738 CC", "Art. 739 CC", "Art. 740 CC"], answer: 0 },
+  { question: "¿Qué artículo del Código Civil establece que pueden testar todos aquellos a quienes la ley no lo prohíbe expresamente?", options: ["Art. 662 CC", "Art. 663 CC", "Art. 664 CC", "Art. 665 CC"], answer: 0 },
+  { question: "¿Qué vicios de la voluntad testamentaria se mencionan en el art. 673 CC?", options: ["Violencia, dolo y fraude", "Error, dolo y fraude", "Violencia, error y fraude", "Violencia, dolo y error"], answer: 0 },
 
+  { question: "¿Qué es un testamento según el art. 667 CC?", options: ["Un acto por el cual una persona dispone para después de su muerte de todos sus bienes", "Un acto por el cual una persona dispone para después de su muerte de parte de sus bienes", "Ambas respuestas son correctas", "Ninguna respuesta es correcta"], answer: 2 },
+  { question: "¿El testamento debe contener necesariamente la designación de heredero?", options: ["Sí", "No"], answer: 1 },
+  { question: "¿El testamento puede contener otro tipo de declaraciones de voluntad, de contenido no patrimonial?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿Cómo se define el testamento?", options: ["Como una declaración de voluntad por la que el causante ordena la sucesión en todo o parte de su patrimonio para cuando él muera", "Como una declaración de voluntad por la que el causante realiza otro tipo de disposiciones", "Ambas respuestas son correctas", "Ninguna respuesta es correcta"], answer: 2 },
+  { question: "¿El testamento es un acto unilateral?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿El testamento es un acto personalísimo?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿El testamento es un acto solemne?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿El testamento es revocable?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿Pueden testar todas las personas?", options: ["Sí", "No"], answer: 1 },
+  { question: "¿Quiénes están incapacitados para testar?", options: ["La persona menor de catorce años", "La persona que en el momento de testar no pueda conformar o expresar su voluntad ni aun con ayuda de medios o apoyos para ello", "Ambas respuestas son correctas", "Ninguna respuesta es correcta"], answer: 2 },
+  { question: "¿La voluntad testamentaria ha de formarse y expresarse libremente?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿Qué vicios pueden invalidar la voluntad testamentaria?", options: ["Violencia e intimidación", "Dolo o fraude", "Error", "Todos los anteriores"], answer: 3 },
+  { question: "¿Qué es la violencia en el contexto de los vicios de la voluntad testamentaria?", options: ["Comprende tanto la violencia física como la moral", "Procede siempre de un tercero", "Ambas respuestas son correctas", "Ninguna respuesta es correcta"], answer: 2 },
+  { question: "¿Qué es el dolo en el contexto de los vicios de la voluntad testamentaria?", options: ["Es cuando el testador se ve influenciado por la conducta maliciosa de un tercero", "Puede actuar en su propio beneficio o en el de otro tercero", "Ambas respuestas son correctas", "Ninguna respuesta es correcta"], answer: 2 },
+  { question: "¿Qué es el error en el contexto de los vicios de la voluntad testamentaria?", options: ["Supone una falsa representación de la realidad", "Puede diferenciarse entre el error vicio y el error en la declaración", "Ambas respuestas son correctas", "Ninguna respuesta es correcta"], answer: 2 },
+  { question: "¿El error vicio debe ser determinante para ser relevante a los efectos de determinar la nulidad del testamento?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿El error en la declaración invalidará el testamento sólo en el caso de que no pueda salvarse por medio de la interpretación?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿El testamento puede contener disposiciones a favor del alma y de los pobres?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿El testamento puede contener el nombramiento de personas para cargos tutelares o medidas de apoyo?", options: ["Sí", "No"], answer: 0 },
+  { question: "¿El testamento puede contener la orden de funerales y enterramiento?", options: ["Sí", "No"], answer: 0 },
 
 
 
