--- a/0_Pages/0_testvarios/Test/Test eclesia.html
+++ b/0_Pages/0_testvarios/Test/Test eclesia.html
@@ -443,6 +443,26 @@ var questions = [
   { question: "¿Qué significa que un estado sea confesional?", options: ["El estado opta por una religión", "El estado es indiferente a la religión", "El estado es neutral ante las opciones religiosas", "El estado promueve todas las religiones"], answer: 0 },
   { question: "¿Qué significa que un estado sea aconfesional?", options: ["El estado opta por una religión", "El estado es indiferente a la religión", "El estado es neutral ante las opciones religiosas", "El estado promueve todas las religiones"], answer: 2 },
 
+  { question: "¿Qué modelo de derecho eclesiástico adoptó el estado español?", options: ["Confesional", "Laicista", "Aconfesional", "Teocrático"], answer: 2 },
+  { question: "¿Qué sistema normativo no debe ir indiferente de la constitución?", options: ["Teocrático", "Dictatorial", "Aconfesional", "Laicista"], answer: 0 },
+  { question: "¿En qué año se estableció la constitución que declaró la aconfesionalidad en España?", options: ["1978", "1980", "1982", "1984"], answer: 0 },
+  { question: "¿Qué artículo de la constitución pone fin al sistema de la república y también a la confesionalidad?", options: ["Artículo 14", "Artículo 15", "Artículo 16", "Artículo 17"], answer: 2 },
+  { question: "¿Qué tipo de modelo de sistema tiene España?", options: ["Laicista", "Confesional", "Aconfesional", "Teocrático"], answer: 2 },
+  { question: "¿Qué tipo de normas tiene nuestro ordenamiento?", options: ["Unilaterales", "Bilaterales", "Ambas", "Ninguna"], answer: 2 },
+  { question: "¿Qué artículo de la constitución define la igualdad religiosa?", options: ["Artículo 14", "Artículo 15", "Artículo 16", "Artículo 17"], answer: 0 },
+  { question: "¿Cuántos principios definen nuestro sistema?", options: ["2", "3", "4", "5"], answer: 2 },
+  { question: "¿Qué principio obliga al estado a buscar nuestro derecho de libertad religiosa?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+  { question: "¿Qué artículo de la CE obliga al estado a trabajar para garantizar la libertad religiosa?", options: ["Artículo 9.2", "Artículo 10.2", "Artículo 11.2", "Artículo 12.2"], answer: 0 },
+  { question: "¿Qué principio reconoce el derecho de los ciudadanos a actuar en este campo con plena inmunidad de coacción del Estado?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+  { question: "¿Qué artículo de la CE dice que ninguna confesión tendrá carácter estatal?", options: ["Artículo 14", "Artículo 15", "Artículo 16", "Artículo 17"], answer: 2 },
+  { question: "¿Qué concepto se conecta con la neutralidad debida por ser aconfesional?", options: ["No concurrencia en materia de fe", "Inmunidad de coacción del ciudadano", "Ambos", "Ninguno"], answer: 0 },
+  { question: "¿Qué principio obliga al estado a respetar la constitución?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+  { question: "¿Qué principio marca el camino, obligando al estado?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+  { question: "¿Qué principio es una obligación para el estado?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+  { question: "¿Qué principio es un derecho de los ciudadanos, no del estado?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+  { question: "¿Qué principio es un derecho subjetivo dado que lo poseen los ciudadanos?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+  { question: "¿Qué principio es un derecho que se contiene en el artículo 16 y es el que nosotros tenemos?", options: ["Libertad religiosa", "Aconfesionalidad, laicidad", "Igualdad religiosa", "Cooperación"], answer: 0 },
+
 
 
 
